h2 tag is added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title> Shiksahyala College</title>
    </head>
    <body>
-    <h1> ths is web page for shikshyala college  </h1>
-<p> shikshyala college is situated in loaknthali bhaktapur </p> 
-
+    <h1 > This is web page for shikshyala college  </h1>
+    <h2> this is web page </h2>
+<p> Shikshyala college is situated in loaknthali bhaktapur </p> 
    </body>
 </html>
