--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <body>
     <h1 > This is web page for shikshyala college  </h1>
     <h2> this is web page </h2>
+    <h3> web web </h3>
 <p> Shikshyala college is situated in loaknthali bhaktapur </p> 
    </body>
 </html>
